--- a/style.css
+++ b/style.css
@@ -1,37 +1,3 @@
-:root {
-    /* color */
-    --color-white: #ffffff;
-    --color-light-white: #eeeeee;
-    --color-dark-white: #bdbdbd;
-    --color-pink: #fe918d;
-    --color-dark-pink: #ff6863;
-    --color-dark-grey: #4d4d4d;
-    --color-grey: #616161;
-    --color-light-grey: #7c7979;
-    --color-blue: #73aace;
-    --color-yellow: #fff7d1;
-    --color-orange: #feb546;
-    --color-black: #000000;
-    --color-navbar: #171c22;
-    --color-light-navbar: #272e35;
-    --color-light-navbar2: #325777;
-
-    /* Font size */
-    --font-large: 48px;
-    --font-medium: 28px;
-    --font-regular: 18px;
-    --font-small: 16px;
-    --font-micro: 14px;
-
-    /* Font weight */
-    --weight-bold: 700;
-    --weight-semi-bold: 600;
-    --weight-regular: 400;
-
-    /* Size */
-    --size-border-radius: 4px;
-}
-
 * {
     margin: 0;
 }
@@ -44,7 +10,7 @@ body {
 
 a {
     text-decoration: none;
-    color: var(--color-black);
+    color: black;
 }
 
 ul {
@@ -55,13 +21,7 @@ li {
     list-style: none;
 }
 
-section {
-    margin: 30px;
-    padding: 16px;
-}
-
 #navbar {
-    width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
